k8s/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-app-deployment
  labels:
    app: golang-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: golang-app
  template:
    metadata:
      labels:
        app: golang-app
    spec:
      containers:
        - name: golang-app-container
          image: khannashiv/go-web-app:v1
          ports:
            - containerPort: 8080
