k8s/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: golang-app-service
spec:
  selector:
    app.kubernetes.io/name: golang-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
