k8s/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "learnandstudydevops.work.gd"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: golang-app-service
                port:
                  number: 80
